add schem H2 pour test unitaire & fix config enums & add dependency hypersistence-utils-hibernate